# h2overlord

./: .gitignore  README.md  build.sh  run.sh
h2overlord-python/: pyproject.toml
h2overlord-python/src/h2overlord_python/: main.py  pumpservice.py  raspiservice.py  server.py  test.py
h2overlord-python/src/h2overlord_python/Config/: config.json  config.py
h2overlord-python/src/h2overlord_python/Data/: pumpstate.py
h2overlord-python/tests/: test_server.py
web-frontend/h2overlord-frontend/: README.md  index.html  package-lock.json  package.json
web-frontend/h2overlord-frontend/src/: main.ts  root-component.css  root-component.html  root-component.ts
web-frontend/h2overlord-frontend/src/Actions/: actions-component.css  actions-component.html  actions-component.ts
web-frontend/h2overlord-frontend/src/Reusable/: card-component.css  card-component.html  card-component.ts
web-frontend/h2overlord-frontend/src/Schedule/: schedule-component.css  schedule-component.html  schedule-component.ts
web-frontend/h2overlord-frontend/src/Services/: HttpClientService.ts  StatusData.ts
web-frontend/h2overlord-frontend/src/Status/: status-board.css  status-board.html  status-board.ts
