[project]
name = "h2overlord-python"
version = "0.1.0"
description = ""
authors = [
    {name = "erdeanmich",email = "erdeanlinda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gpiozero (>=2.0.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "h2overlord_python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
